{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 582,
  "lineage": "5c5471f2-5651-bd87-9085-a70b441bced4",
  "resources": [
    {
      "module": "module.alb_region-1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:loadbalancer/app/tf-lb-20241129120519077300000006/8bd689979376e068",
            "arn_suffix": "app/tf-lb-20241129120519077300000006/8bd689979376e068",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20241129120519077300000006-1070539179.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:loadbalancer/app/tf-lb-20241129120519077300000006/8bd689979376e068",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20241129120519077300000006",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09efea1b6d5ead4e3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d1589002e3d310be"
              },
              {
                "subnet_id": "subnet-0f8e4e71d88fbc09a"
              }
            ],
            "subnets": [
              "subnet-0d1589002e3d310be",
              "subnet-0f8e4e71d88fbc09a"
            ],
            "vpc_id": "vpc-0e03f161fe2d5b29e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-1",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:listener/app/tf-lb-20241129120519077300000006/8bd689979376e068/7cae7749b0a5a586",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:listener/app/tf-lb-20241129120519077300000006/8bd689979376e068/7cae7749b0a5a586",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:loadbalancer/app/tf-lb-20241129120519077300000006/8bd689979376e068",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_region-1.aws_lb.alb",
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762",
            "arn_suffix": "targetgroup/tf-20241129120506075600000001/29a217bdab88c762",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20241129120506075600000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
            },
            "tags_all": {
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-1",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762-20241129120811314400000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762",
            "target_id": "i-0a1dbc31c01bbd91d"
          },
          "dependencies": [
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.compute_region_a.aws_instance.private_1",
            "module.compute_region_a.aws_instance.private_2",
            "module.compute_region_a.aws_instance.private_3",
            "module.compute_region_a.aws_instance.private_4",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762-2024112912081081940000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762",
            "target_id": "i-0eebeb0049e1dd611"
          },
          "dependencies": [
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.compute_region_a.aws_instance.private_1",
            "module.compute_region_a.aws_instance.private_2",
            "module.compute_region_a.aws_instance.private_3",
            "module.compute_region_a.aws_instance.private_4",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762-2024112912081037640000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762",
            "target_id": "i-0b659cc17209bfc39"
          },
          "dependencies": [
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.compute_region_a.aws_instance.private_1",
            "module.compute_region_a.aws_instance.private_2",
            "module.compute_region_a.aws_instance.private_3",
            "module.compute_region_a.aws_instance.private_4",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762-2024112912081126020000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218419384265:targetgroup/tf-20241129120506075600000001/29a217bdab88c762",
            "target_id": "i-080c5554015bc9781"
          },
          "dependencies": [
            "module.alb_region-1.aws_lb_target_group.alb_tg",
            "module.compute_region_a.aws_instance.private_1",
            "module.compute_region_a.aws_instance.private_2",
            "module.compute_region_a.aws_instance.private_3",
            "module.compute_region_a.aws_instance.private_4",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:218419384265:loadbalancer/app/tf-lb-20241129120544393700000008/6b8a399632af9aed",
            "arn_suffix": "app/tf-lb-20241129120544393700000008/6b8a399632af9aed",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20241129120544393700000008-1909224192.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:218419384265:loadbalancer/app/tf-lb-20241129120544393700000008/6b8a399632af9aed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20241129120544393700000008",
            "preserve_host_header": false,
            "security_groups": [
              "sg-095a72273b8ceb4c9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f6abc3f61c16096"
              },
              {
                "subnet_id": "subnet-0e47a0525819e1f74"
              }
            ],
            "subnets": [
              "subnet-01f6abc3f61c16096",
              "subnet-0e47a0525819e1f74"
            ],
            "vpc_id": "vpc-05011651954456610",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:218419384265:listener/app/tf-lb-20241129120544393700000008/6b8a399632af9aed/d390c0ca50b18cd3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:218419384265:listener/app/tf-lb-20241129120544393700000008/6b8a399632af9aed/d390c0ca50b18cd3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:218419384265:loadbalancer/app/tf-lb-20241129120544393700000008/6b8a399632af9aed",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_region-2.aws_lb.alb",
            "module.alb_region-2.aws_lb_target_group.alb_tg",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e",
            "arn_suffix": "targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20241129120511206400000002",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
            },
            "tags_all": {
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05011651954456610"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.alb_region-2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e-2024112912062364030000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e",
            "target_id": "i-0747950f00c26b36b"
          },
          "dependencies": [
            "module.alb_region-2.aws_lb_target_group.alb_tg",
            "module.compute_region_b.aws_instance.private_1",
            "module.compute_region_b.aws_instance.private_2",
            "module.compute_region_b.aws_instance.private_3",
            "module.compute_region_b.aws_instance.private_4",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e-20241129120624149400000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e",
            "target_id": "i-0ec459ebfecc3e7de"
          },
          "dependencies": [
            "module.alb_region-2.aws_lb_target_group.alb_tg",
            "module.compute_region_b.aws_instance.private_1",
            "module.compute_region_b.aws_instance.private_2",
            "module.compute_region_b.aws_instance.private_3",
            "module.compute_region_b.aws_instance.private_4",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e-2024112912062320800000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e",
            "target_id": "i-066f7db4e355d5223"
          },
          "dependencies": [
            "module.alb_region-2.aws_lb_target_group.alb_tg",
            "module.compute_region_b.aws_instance.private_1",
            "module.compute_region_b.aws_instance.private_2",
            "module.compute_region_b.aws_instance.private_3",
            "module.compute_region_b.aws_instance.private_4",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e-2024112912062408830000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:218419384265:targetgroup/tf-20241129120511206400000002/23bfd672f768fd3e",
            "target_id": "i-06b55c66319552984"
          },
          "dependencies": [
            "module.alb_region-2.aws_lb_target_group.alb_tg",
            "module.compute_region_b.aws_instance.private_1",
            "module.compute_region_b.aws_instance.private_2",
            "module.compute_region_b.aws_instance.private_3",
            "module.compute_region_b.aws_instance.private_4",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-0a1dbc31c01bbd91d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1dbc31c01bbd91d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cc8d814b03021b86",
            "private_dns": "ip-10-0-3-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9d24aa4fc7962f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-073f0425a5be6e8cd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e92c3c30edcd081",
            "tags": {
              "Name": "Private-EC2-private-1"
            },
            "tags_all": {
              "Name": "Private-EC2-private-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073f0425a5be6e8cd"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-0eebeb0049e1dd611",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eebeb0049e1dd611",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01430952c132367f7",
            "private_dns": "ip-10-0-4-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9ff272d535dd206",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-073f0425a5be6e8cd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfcc70b871307867",
            "tags": {
              "Name": "Private-EC2-private-2"
            },
            "tags_all": {
              "Name": "Private-EC2-private-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073f0425a5be6e8cd"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-0b659cc17209bfc39",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b659cc17209bfc39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0608726ecf4912df8",
            "private_dns": "ip-10-0-5-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ecf0c19e4f684cfd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-073f0425a5be6e8cd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08fdd5406160578b4",
            "tags": {
              "Name": "Private-EC2-private-3"
            },
            "tags_all": {
              "Name": "Private-EC2-private-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073f0425a5be6e8cd"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-080c5554015bc9781",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080c5554015bc9781",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b169b7cb7432b038",
            "private_dns": "ip-10-0-6-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0768d3a1d2674643a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-073f0425a5be6e8cd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027e120b187da1508",
            "tags": {
              "Name": "Private-EC2-private-4"
            },
            "tags_all": {
              "Name": "Private-EC2-private-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073f0425a5be6e8cd"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC",
            "module.security_region_1.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da424eb883458071",
            "arn": "arn:aws:ec2:us-west-1:218419384265:instance/i-0747950f00c26b36b",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0747950f00c26b36b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0953625c1ff17e569",
            "private_dns": "ip-10-1-3-193.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02954b2e24b1ca582",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d287bbe995fffa51"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a90f9476dd318816",
            "tags": {
              "Name": "Private-EC2-private-1"
            },
            "tags_all": {
              "Name": "Private-EC2-private-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d287bbe995fffa51"
            ]
          },
          "dependencies": [
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da424eb883458071",
            "arn": "arn:aws:ec2:us-west-1:218419384265:instance/i-0ec459ebfecc3e7de",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec459ebfecc3e7de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0812c324b8f404db3",
            "private_dns": "ip-10-1-4-82.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.4.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-007fcc93b07003fd0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d287bbe995fffa51"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e42c0a176767b0e1",
            "tags": {
              "Name": "Private-EC2-private-2"
            },
            "tags_all": {
              "Name": "Private-EC2-private-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d287bbe995fffa51"
            ]
          },
          "dependencies": [
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da424eb883458071",
            "arn": "arn:aws:ec2:us-west-1:218419384265:instance/i-066f7db4e355d5223",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066f7db4e355d5223",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c07f51f3f9e21e6",
            "private_dns": "ip-10-1-5-76.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.5.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0702228f9cd9db651",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d287bbe995fffa51"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae825c162491fb75",
            "tags": {
              "Name": "Private-EC2-private-3"
            },
            "tags_all": {
              "Name": "Private-EC2-private-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d287bbe995fffa51"
            ]
          },
          "dependencies": [
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute_region_b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da424eb883458071",
            "arn": "arn:aws:ec2:us-west-1:218419384265:instance/i-06b55c66319552984",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b55c66319552984",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03df5eb072e97ab35",
            "private_dns": "ip-10-1-6-166.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.6.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05123cb0a44b98938",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d287bbe995fffa51"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02354f8f4a1e2bb99",
            "tags": {
              "Name": "Private-EC2-private-4"
            },
            "tags_all": {
              "Name": "Private-EC2-private-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d287bbe995fffa51"
            ]
          },
          "dependencies": [
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC",
            "module.security_region_2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c97d935f23687267",
            "domain": "vpc",
            "id": "eipalloc-0c97d935f23687267",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-157-215-28.compute-1.amazonaws.com",
            "public_ip": "54.157.215.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f497a8a39f5aa61",
            "domain": "vpc",
            "id": "eipalloc-05f497a8a39f5aa61",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-71-36-121.compute-1.amazonaws.com",
            "public_ip": "52.71.36.121",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-06ee764c124ea80b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ee764c124ea80b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a84e8f645de196ec",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-44-199-254-152.compute-1.amazonaws.com",
            "public_ip": "44.199.254.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f4bdc7d08b77dfc1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1589002e3d310be",
            "tags": {
              "Name": "us-east-1-Bastion-Host-public-1"
            },
            "tags_all": {
              "Name": "us-east-1-Bastion-Host-public-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04fa87acae7ca8aa3"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:218419384265:instance/i-0a9477e52fdb1887c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9477e52fdb1887c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-097b92ffd9bd50695",
            "private_dns": "ip-10-0-2-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.82",
            "public_dns": "ec2-54-84-45-120.compute-1.amazonaws.com",
            "public_ip": "54.84.45.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074d477f20cb5d2ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8e4e71d88fbc09a",
            "tags": {
              "Name": "us-east-1-Bastion-Host-public-2"
            },
            "tags_all": {
              "Name": "us-east-1-Bastion-Host-public-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04fa87acae7ca8aa3"
            ]
          },
          "dependencies": [
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:internet-gateway/igw-099a9a93a296acbe4",
            "id": "igw-099a9a93a296acbe4",
            "owner_id": "218419384265",
            "tags": {
              "Name": "us-east-1-igw"
            },
            "tags_all": {
              "Name": "us-east-1-igw"
            },
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c97d935f23687267",
            "association_id": "eipassoc-060933fba26fa4b5a",
            "connectivity_type": "public",
            "id": "nat-0eb262b7e1472cbe2",
            "network_interface_id": "eni-09f6372ed1248acd9",
            "private_ip": "10.0.1.22",
            "public_ip": "54.157.215.28",
            "subnet_id": "subnet-0d1589002e3d310be",
            "tags": {
              "Name": "us-east-1-NAT-Gateway-public-1"
            },
            "tags_all": {
              "Name": "us-east-1-NAT-Gateway-public-1"
            }
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f497a8a39f5aa61",
            "association_id": "eipassoc-00f01aeec609e7f61",
            "connectivity_type": "public",
            "id": "nat-0a8135288cc94e547",
            "network_interface_id": "eni-00f70c390d69a79eb",
            "private_ip": "10.0.2.215",
            "public_ip": "52.71.36.121",
            "subnet_id": "subnet-0f8e4e71d88fbc09a",
            "tags": {
              "Name": "us-east-1-NAT-Gateway-public-2"
            },
            "tags_all": {
              "Name": "us-east-1-NAT-Gateway-public-2"
            }
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "nat-public-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:route-table/rtb-0ded6574d90a0d200",
            "id": "rtb-0ded6574d90a0d200",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb262b7e1472cbe2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-Private-Route-Table-nat-public-1"
            },
            "tags_all": {
              "Name": "us-east-1-Private-Route-Table-nat-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "nat-public-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:route-table/rtb-0125f81b994493065",
            "id": "rtb-0125f81b994493065",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a8135288cc94e547",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-Private-Route-Table-nat-public-2"
            },
            "tags_all": {
              "Name": "us-east-1-Private-Route-Table-nat-public-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:route-table/rtb-019279254c1cf4402",
            "id": "rtb-019279254c1cf4402",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099a9a93a296acbe4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-Public-Route-Table"
            },
            "tags_all": {
              "Name": "us-east-1-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_internet_gateway.igw",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_and_3_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcc147974fffdae4",
            "route_table_id": "rtb-0ded6574d90a0d200",
            "subnet_id": "subnet-02e92c3c30edcd081"
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_route_table.private_route_tables",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec25114192cc649d",
            "route_table_id": "rtb-0ded6574d90a0d200",
            "subnet_id": "subnet-08fdd5406160578b4"
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_route_table.private_route_tables",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_and_4_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf33114b33e730c1",
            "route_table_id": "rtb-0125f81b994493065",
            "subnet_id": "subnet-0dfcc70b871307867"
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_route_table.private_route_tables",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff12307c1cd6cd61",
            "route_table_id": "rtb-0125f81b994493065",
            "subnet_id": "subnet-027e120b187da1508"
          },
          "dependencies": [
            "module.network_region_a.aws_eip.nat_eips",
            "module.network_region_a.aws_nat_gateway.nat_gateways",
            "module.network_region_a.aws_route_table.private_route_tables",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1496796eeb8b78",
            "route_table_id": "rtb-019279254c1cf4402",
            "subnet_id": "subnet-0d1589002e3d310be"
          },
          "dependencies": [
            "module.network_region_a.aws_internet_gateway.igw",
            "module.network_region_a.aws_route_table.public_route_table",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b449e4783e1667f",
            "route_table_id": "rtb-019279254c1cf4402",
            "subnet_id": "subnet-0f8e4e71d88fbc09a"
          },
          "dependencies": [
            "module.network_region_a.aws_internet_gateway.igw",
            "module.network_region_a.aws_route_table.public_route_table",
            "module.network_region_a.aws_subnet.subnets",
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-02e92c3c30edcd081",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e92c3c30edcd081",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-private-1"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-private-1"
            },
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-0dfcc70b871307867",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfcc70b871307867",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-private-2"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-private-2"
            },
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-08fdd5406160578b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fdd5406160578b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-private-3"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-private-3"
            },
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-027e120b187da1508",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027e120b187da1508",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-private-4"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-private-4"
            },
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-0d1589002e3d310be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1589002e3d310be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-public-1"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-public-1"
            },
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:subnet/subnet-0f8e4e71d88fbc09a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8e4e71d88fbc09a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-Subnet-public-2"
            },
            "tags_all": {
              "Name": "us-east-1-Subnet-public-2"
            },
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_a",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:vpc/vpc-0e03f161fe2d5b29e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb4c56f9607a267a",
            "default_route_table_id": "rtb-01dd43c1f8d248967",
            "default_security_group_id": "sg-04fa87acae7ca8aa3",
            "dhcp_options_id": "dopt-06921c6390dcf404e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e03f161fe2d5b29e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01dd43c1f8d248967",
            "owner_id": "218419384265",
            "tags": {
              "Name": "VPC-us-east-1"
            },
            "tags_all": {
              "Name": "VPC-us-east-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c91d9d144f7961c8",
            "domain": "vpc",
            "id": "eipalloc-0c91d9d144f7961c8",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-193-159-161.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.159.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087427fc381f731cb",
            "domain": "vpc",
            "id": "eipalloc-087427fc381f731cb",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-193-170-246.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.170.246",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da424eb883458071",
            "arn": "arn:aws:ec2:us-west-1:218419384265:instance/i-05ae497e7e9d754d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ae497e7e9d754d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c995811ca3ef641",
            "private_dns": "ip-10-1-1-62.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.62",
            "public_dns": "ec2-184-169-195-137.us-west-1.compute.amazonaws.com",
            "public_ip": "184.169.195.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e776433efa1dee7d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e47a0525819e1f74",
            "tags": {
              "Name": "us-west-1-Bastion-Host-public-1"
            },
            "tags_all": {
              "Name": "us-west-1-Bastion-Host-public-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c61bd853d55973fd"
            ]
          },
          "dependencies": [
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da424eb883458071",
            "arn": "arn:aws:ec2:us-west-1:218419384265:instance/i-07d3e7acf4f555c77",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d3e7acf4f555c77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "basiton",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e4216b355724ba11",
            "private_dns": "ip-10-1-2-94.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.94",
            "public_dns": "ec2-3-101-81-186.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.81.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-066d7478a932756f0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f6abc3f61c16096",
            "tags": {
              "Name": "us-west-1-Bastion-Host-public-2"
            },
            "tags_all": {
              "Name": "us-west-1-Bastion-Host-public-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c61bd853d55973fd"
            ]
          },
          "dependencies": [
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:internet-gateway/igw-00804e54b78420c6e",
            "id": "igw-00804e54b78420c6e",
            "owner_id": "218419384265",
            "tags": {
              "Name": "us-west-1-igw"
            },
            "tags_all": {
              "Name": "us-west-1-igw"
            },
            "vpc_id": "vpc-05011651954456610"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c91d9d144f7961c8",
            "association_id": "eipassoc-0989cc03ab803fdee",
            "connectivity_type": "public",
            "id": "nat-06bc52ab1ce7549d9",
            "network_interface_id": "eni-03ac7247c8da52a8e",
            "private_ip": "10.1.1.187",
            "public_ip": "54.193.159.161",
            "subnet_id": "subnet-0e47a0525819e1f74",
            "tags": {
              "Name": "us-west-1-NAT-Gateway-public-1"
            },
            "tags_all": {
              "Name": "us-west-1-NAT-Gateway-public-1"
            }
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087427fc381f731cb",
            "association_id": "eipassoc-0cbbf82f5e3f19fcf",
            "connectivity_type": "public",
            "id": "nat-01f4bb4c7a6382cc1",
            "network_interface_id": "eni-05e93fd4173c4726f",
            "private_ip": "10.1.2.118",
            "public_ip": "54.193.170.246",
            "subnet_id": "subnet-01f6abc3f61c16096",
            "tags": {
              "Name": "us-west-1-NAT-Gateway-public-2"
            },
            "tags_all": {
              "Name": "us-west-1-NAT-Gateway-public-2"
            }
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "nat-public-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:route-table/rtb-017e29f7c3a9e6c0d",
            "id": "rtb-017e29f7c3a9e6c0d",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06bc52ab1ce7549d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-west-1-Private-Route-Table-nat-public-1"
            },
            "tags_all": {
              "Name": "us-west-1-Private-Route-Table-nat-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05011651954456610"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "nat-public-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:route-table/rtb-0043017e480279fce",
            "id": "rtb-0043017e480279fce",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f4bb4c7a6382cc1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-west-1-Private-Route-Table-nat-public-2"
            },
            "tags_all": {
              "Name": "us-west-1-Private-Route-Table-nat-public-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05011651954456610"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:route-table/rtb-010603210686b7c7d",
            "id": "rtb-010603210686b7c7d",
            "owner_id": "218419384265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00804e54b78420c6e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-west-1-Public-Route-Table"
            },
            "tags_all": {
              "Name": "us-west-1-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05011651954456610"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_b.aws_internet_gateway.igw",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_and_3_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034a750505d64884b",
            "route_table_id": "rtb-017e29f7c3a9e6c0d",
            "subnet_id": "subnet-0a90f9476dd318816"
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_route_table.private_route_tables",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02597778bd7248963",
            "route_table_id": "rtb-017e29f7c3a9e6c0d",
            "subnet_id": "subnet-0ae825c162491fb75"
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_route_table.private_route_tables",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_and_4_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d78a34e426d5617",
            "route_table_id": "rtb-0043017e480279fce",
            "subnet_id": "subnet-0e42c0a176767b0e1"
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_route_table.private_route_tables",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4895bbd9860dc23",
            "route_table_id": "rtb-0043017e480279fce",
            "subnet_id": "subnet-02354f8f4a1e2bb99"
          },
          "dependencies": [
            "module.network_region_b.aws_eip.nat_eips",
            "module.network_region_b.aws_nat_gateway.nat_gateways",
            "module.network_region_b.aws_route_table.private_route_tables",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b6574073765698f",
            "route_table_id": "rtb-010603210686b7c7d",
            "subnet_id": "subnet-0e47a0525819e1f74"
          },
          "dependencies": [
            "module.network_region_b.aws_internet_gateway.igw",
            "module.network_region_b.aws_route_table.public_route_table",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0f94ab2d1b0f9b9",
            "route_table_id": "rtb-010603210686b7c7d",
            "subnet_id": "subnet-01f6abc3f61c16096"
          },
          "dependencies": [
            "module.network_region_b.aws_internet_gateway.igw",
            "module.network_region_b.aws_route_table.public_route_table",
            "module.network_region_b.aws_subnet.subnets",
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-0a90f9476dd318816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a90f9476dd318816",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-private-1"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-private-1"
            },
            "vpc_id": "vpc-05011651954456610"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-0e42c0a176767b0e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e42c0a176767b0e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-private-2"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-private-2"
            },
            "vpc_id": "vpc-05011651954456610"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-0ae825c162491fb75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae825c162491fb75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-private-3"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-private-3"
            },
            "vpc_id": "vpc-05011651954456610"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "private-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-02354f8f4a1e2bb99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02354f8f4a1e2bb99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-private-4"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-private-4"
            },
            "vpc_id": "vpc-05011651954456610"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-0e47a0525819e1f74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e47a0525819e1f74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-public-1"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-public-1"
            },
            "vpc_id": "vpc-05011651954456610"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:subnet/subnet-01f6abc3f61c16096",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f6abc3f61c16096",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218419384265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1-Subnet-public-2"
            },
            "tags_all": {
              "Name": "us-west-1-Subnet-public-2"
            },
            "vpc_id": "vpc-05011651954456610"
          },
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network_region_b",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:vpc/vpc-05011651954456610",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c8ee66110920de46",
            "default_route_table_id": "rtb-0818c29c1189c854f",
            "default_security_group_id": "sg-0c61bd853d55973fd",
            "dhcp_options_id": "dopt-095f255f0702b2e7b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05011651954456610",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0818c29c1189c854f",
            "owner_id": "218419384265",
            "tags": {
              "Name": "VPC-us-west-1"
            },
            "tags_all": {
              "Name": "VPC-us-west-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_region_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:security-group/sg-09efea1b6d5ead4e3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09efea1b6d5ead4e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241129120506078300000002",
            "name_prefix": "terraform-",
            "owner_id": "218419384265",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_region_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_a",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218419384265:security-group/sg-073f0425a5be6e8cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073f0425a5be6e8cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241129120507166200000003",
            "name_prefix": "terraform-",
            "owner_id": "218419384265",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e03f161fe2d5b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_a.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_region_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:security-group/sg-095a72273b8ceb4c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095a72273b8ceb4c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241129120510185900000001",
            "name_prefix": "terraform-",
            "owner_id": "218419384265",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05011651954456610"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_region_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region_b",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:218419384265:security-group/sg-0d287bbe995fffa51",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d287bbe995fffa51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241129120511208000000003",
            "name_prefix": "terraform-",
            "owner_id": "218419384265",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05011651954456610"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_region_b.aws_vpc.VPC"
          ]
        }
      ]
    }
  ]
}